src/app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Sonsie+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Jersey+20&display=swap');
@import url('https://fonts.cdnfonts.com/css/geist-mono');
@import 'tailwindcss';

:root {
  --background: #000000;
  --primary: #0070f3;
  --secondary: #1c1c1e;
  --foreground: #ffffff;
  --transition-duration: 0.5s;
}

* {
  transition: background-color var(--transition-duration),
    border-color var(--transition-duration),
    color var(--transition-duration);
}

html {
  scroll-behavior: smooth;
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: 'Inter', Arial, Helvetica, sans-serif;
}

.gradient-bg {
  background: linear-gradient(135deg, var(--primary), var(--secondary));
  transition: all 0.3s ease;
}

.font-sonsie {
  font-family: 'Sonsie One', cursive;
}

.font-inter-heavy {
  font-family: 'Inter', sans-serif;
  font-weight: 800;
}

.font-jersey {
  font-family: 'Jersey 20', cursive;
  font-size: 75px;
}

.font-geist-mono {
  font-family: 'Geist Mono', monospace;
  font-weight: 700;
}

.title {
  font-size: 48px;
  font-weight: 600;
  line-height: normal;
  width: max-content;
  background-image: linear-gradient(135deg, var(--primary), var(--secondary));
  -webkit-background-clip: text;
  background-clip: text;
  color: transparent;
}

.subtitle {
  font-size: 18px;
  font-weight: 500;
}

.paragraph {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #86868B;
}

.job-title {
  font-size: 32px;
  font-weight: 600;
  line-height: normal;
  width: max-content;
  background-image: linear-gradient(135deg, var(--primary), var(--secondary));
  -webkit-background-clip: text;
  background-clip: text;
  color: transparent;
}

.project-title {
  font-size: 32px;
  font-weight: 600;
  line-height: normal;
}

.repo-button {
  font-weight: 600;
  font-size: 16px;
  display: flex;
  flex: 1;
  gap: 12px;
  align-items: center;
  justify-content: center;
  padding: 8px 16px;
  border: 1px solid rgba(40, 40, 40, 0.6);
  border-radius: 8px;
  max-height: 40px;
  position: relative;
  background: transparent;
  z-index: 1;
  transition: transform 0.2s;
}

.repo-button::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 7px;
  background: linear-gradient(to right,
      rgba(255, 255, 255, 0) 0%,
      rgba(255, 255, 255, 0.06) 50%,
      rgba(255, 255, 255, 0.1) 100%);
  z-index: -1;
  opacity: 1;
  transition: opacity 0.2s;
}

.repo-button::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 7px;
  background: rgba(255, 255, 255, 0.2);
  z-index: -1;
  opacity: 0;
  transition: opacity 0.2s;
}

.repo-button:hover {
  transform: scale(1.05);
}

.repo-button:hover::before {
  opacity: 0;
}

.repo-button:hover::after {
  opacity: 1;
}

.site-button {
  font-weight: 600;
  font-size: 16px;
  border-radius: 8px;
  padding: 8px 16px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex: 1;
  gap: 12px;
  max-height: 40px;
  position: relative;
  background: transparent;
  z-index: 1;
  transition: transform 0.2s;
}

.site-button::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 7px;
  background: linear-gradient(135deg, var(--primary), var(--secondary));
  opacity: 0.3;
  z-index: -1;
  transition: opacity 0.2s;
}

.site-button:hover {
  transform: scale(1.05);
}

.site-button:hover::before {
  opacity: 0.9;
}

.text-primary {
  color: var(--primary);
}

.text-secondary {
  color: var(--secondary);
}

